# geneticMusic

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
config/: gatorgrade.yml
docker/: Dockerfile  readme_docker.md
geneticmusic/: README.md  main.py  pyproject.toml
geneticmusic/.github/workflows/: build.yml
geneticmusic/geneticmusic/: main.py
genmus/: pyproject.toml  pyproject_toml_bk1.toml
genmus/data/: dog.fasta  mydata.fasta  rabbit.fasta  rabbitPartial.fasta
genmus/dd/: f.fasta
genmus/genmus/: genmus_helper.py  launcher.py  main.py  openFile.py  player.py
