[tool.poetry]
name = "geneticmusic"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
geneticmusic = "geneticmusic.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
typer = "^0.6.1"
rich = "^12.6.0"
numpy = "1.19.5"
scipy = "1.5.4"

[tool.poetry.group.dev-dependencies]
black = "^22.8.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
